--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="app">
         <h1>
-            Simple Quiz
+            AI and python Quiz
         </h1>
         <div class="quiz">
             <h2 id="question">
