--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz App</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+    .logo{display: block;
+        margin-bottom: 50px;
+        margin-top: 2%;
+        width: 196px;
+        position:sticky;
+        top:30px;
+    }
+    .box{margin-top: 0 0 2rem 0;
+    padding: 30px 50px;
+    position: relative;}
+    </style>
 </head>
 <body>
+    <div class="box">
+    <div><img src="img/logo.png" alt="Liftmap" class="logo"></div>
     <div class="app">
         <h1>
             AI and python Quiz
@@ -24,6 +38,7 @@
             <button id="next-btn">Next</button>
         </div>
     </div>
+</div>
     <script type="module" src="script.js"></script>
 </body>
 </html>
