--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     .box{margin-top: 0 0 2rem 0;
     padding: 30px 50px;
     position: relative;}
+    .anchor-link{
+        text-decoration: None;
+        color:white;
+    }
     </style>
 </head>
 <body>
