--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
     font-size: 14px;
     font-weight: bold;
     }
+    textarea{
+        width: 60%;
+    height: 100px;
+    padding: 5px;
+    margin-bottom: 25px;
+    margin-top: 5px;
+    border: 2px solid #ccc;
+    color: #4f4f4f;
+    font-size: 16px;
+    border-radius: 5px;
+
+    }
     input[type=button]{
     font-size: 16px;
     background: linear-gradient(#ffbc00 5%, #ffdd7f 100%);
@@ -95,6 +107,7 @@
         <input id="email" name="email" placeholder="Valid Email" type="text">
         <!-- <label>Contact No. :</label> -->
         <input id="contact" name="contact" placeholder="Contact No." type="text">
+        <textarea id="w3review" name="w3review" rows="4" cols="50">Why do you want to join this program?.</textarea>
         <input onclick="myfunction()" type="button" value="Submit">
         
         </form>
