--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     textarea{
         width:100%;
     }
-}
+    .btn-primary{width:100%;
+}}
 
     </style>
     <script src="setting.js"></script>
