--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
         width:100%;
     }
     .btn-primary{width:100%;
-        background-color: #e5a900;
+        background-color: #634904;
 }}
 
     </style>
