--- a/index.html
+++ b/index.html
@@ -109,16 +109,16 @@
     <div class="box">
     <div><img src="img/logo.png" alt="Liftmap" class="logo"></div>
     <h1>LWT AI Quiz</h1>
-    <form id="form_id" method="post" name="myform">
+    <form id="form_id" method="post" action="action.php" name="myform">
         
         <!-- <label>Name :</label> -->
-        <input id="name" name="name" placeholder="Name" type="text">
+        <input id="fname" name="name" placeholder="Name" type="text">
         <!-- <label>Email :</label> -->
         <input id="email" name="email" placeholder="Valid Email" type="text">
         <!-- <label>Contact No. :</label> -->
         <input id="contact" name="contact" placeholder="Contact No." type="text">
         <textarea id="w3review" name="w3review" rows="4" cols="50">Why do you want to join this program?.</textarea>
-        <input onclick="myfunction()" type="button" value="Submit">
+        <input  type="button" value="Submit" onclick="myfunction()">
         
         </form>
         <a href="quiz.html">
